fix location alignment

--- a/src/App.css
+++ b/src/App.css
@@ -142,8 +142,7 @@ header {
     border-bottom: none;
 }
 
-.location__content > *:not(.location__country-container),
-.location__country-container > * {
+.location__content > * {
     margin-block-start: 0.5em;
 }
 
@@ -174,6 +173,10 @@ Media queries
         font-size: 17px;
     }
 
+    .location__icon {
+        width: 8px;
+    }
+
     .location__title {
         font-size: var(--fs-600);
     }
@@ -183,10 +186,18 @@ Media queries
     :root {
         font-size: 19px;
     }
+
+    .location__icon {
+        width: 9px;
+    }
 }
 
 @media (min-width: 768px) {
     :root {
         font-size: 22px;
+    }
+
+    .location__icon {
+        width: 10px;
     }
 }
